//  Copyright (c) 2016-present Yichi. All rights reserved.

import Foundation

enum SystemKeyFunction: String {
  case ShiftSwitch = "SYSTEM KEY - SHIFT"
  case Delete = "SYSTEM KEY - DELETE"

  case Back = "SYSTEM KEY - BACK"
  case BottomRowSwitch = "SYSTEM KEY - LETTERS OR NUMBERS"
  case NextKeyboard = "SYSTEM KEY - NEXT KEYBOARD"

  case Space = "SYSTEM KEY - SPACE"
  case ExtraLetters = "SYSTEM KEY - MORE SYMBOLS"
  case Done = "SYSTEM KEY - DONE"
}
