...

    section <<< AppLogoRow { row in
      row.value = AppDetails.shared.aboutString(separator: "\n", includesVersion: false)
    }

    section <<< createButtonRow(
      title: "Test the keyboard",
      pushing: TestKeyboardViewController.self
    )

    if D.isDebug && !D.isRunningUITests {
      
      section <<< createButtonRow(
...
